<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chooseFiltersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/mid_spacing"
        android:text="@string/chooseFiltersText" />

    <CheckBox
        android:id="@+id/europeanCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:text="@string/european_cuisine_name" />

    <CheckBox
        android:id="@+id/asianCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:text="@string/asian_cuisine_name" />

    <CheckBox
        android:id="@+id/panAsianCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:text="@string/pan_asian_cuisine_name" />

    <CheckBox
        android:id="@+id/orientalCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:text="@string/oriental_cuisine_name" />

    <CheckBox
        android:id="@+id/americanCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:text="@string/american_cuisine_name" />

    <CheckBox
        android:id="@+id/russianCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:text="@string/russian_cuisine_name" />

    <CheckBox
        android:id="@+id/mediterraneanCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:text="@string/mediterranean_cuisine_name" />

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/big_spacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters" />


</LinearLayout>