<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/recipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:ems="10"
        android:hint="@string/enter_the_title_of_recipe"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/authorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:ems="10"
        android:hint="@string/enter_the_author_s_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeTitle" />

        <TextView
            android:id="@+id/chooseCategoriesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing"
            android:text="@string/choose_the_category"
            app:layout_constraintTop_toBottomOf="@id/authorName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/categoriesMenu"
            app:layout_constraintBottom_toTopOf="@id/upStepsBarrier"
            />

    <ImageButton
        android:id="@+id/categoriesMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/categories_menu_button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/upStepsBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        app:srcCompat="@drawable/ic_drop_down_24" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/upStepsBarrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="chooseCategoriesText, categoriesMenu"
            />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stepsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/stepText"
        app:layout_constraintTop_toTopOf="@id/upStepsBarrier"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp"
        tools:listitem="@layout/recipe_step_edit_card" />

    <EditText
        android:id="@+id/stepText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:ems="10"
        android:hint="@string/enter_new_step"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addStepButton"
        app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addStepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save_step" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing"
            android:contentDescription="@string/add_new_recipe_button"
            android:clickable="true"
            app:tint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_save_24" />

</androidx.constraintlayout.widget.ConstraintLayout>